--- a/lp/index.html
+++ b/lp/index.html
@@ -7,7 +7,7 @@
 	<meta charset="UTF-8">
 	<link rel="profile" href="https://gmpg.org/xfn/11">
 
-	<title>LM </title>
+	<title>BEA SLOTS ❤️ </title>
 <meta name='robots' content='max-image-preview:large' />
 <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="alternate" type="application/rss+xml" title="LM  &raquo; Feed" href="feed/index.html" />
 <link rel="alternate" type="application/rss+xml" title="LM  &raquo; Comments Feed" href="comments/feed/index.html" />
